Update Code and fix some bug

--- a/MilkStore.API/appsettings.Development.json
+++ b/MilkStore.API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyCnn": "server =(local),1433;database=MilkStore;uid=sa;pwd=12345;Trusted_Connection=True;Trust Server Certificate=True;Timeout=30;"
+    "MyCnn": "Data Source=.;Initial Catalog=MilkStore;Integrated Security=True;Encrypt=False"
   }
 }
