Update code Order and fix some bug

--- a/MilkStore.API/.env
+++ b/MilkStore.API/.env
@@ -1,15 +1,18 @@
-JWT_KEY=BackEnd127319823712983712983719823
+﻿JWT_KEY=BackEnd127319823712983712983719823
 JWT_ISSUER=BackEnd
 JWT_AUDIENCE=FrontEnd
 
 CLIENT_DOMAIN=http://localhost:3000
-SERVER_DOMAIN=http://milkstore-001-site1.atempurl.com/swagger/index.html
-#DATABASE_CONNECTION_STRING=Server=.;Initial Catalog=MilkStore;Integrated Security=True;Encrypt=False;
+#SERVER_DOMAIN=http://milkstore-001-site1.atempurl.com/
 
-DATABASE_CONNECTION_STRING=Server=SQL5106.site4now.net,1433;Database=db_aae407_milkstore1;User Id=db_aae407_milkstore1_admin;Password=milkstore123;
+#trước khi chạy cần thay đổi SERVER_DOMAIN thành domain của server, domain này chỉ có thời hạn 24h
+SERVER_DOMAIN=https://4156-171-243-49-91.ngrok-free.app
+DATABASE_CONNECTION_STRING=Server=.;Initial Catalog=MilkStore;Integrated Security=True;Encrypt=False;
+
+#DATABASE_CONNECTION_STRING=Server=SQL5106.site4now.net,1433;Database=db_aae407_milkstore1;User Id=db_aae407_milkstore1_admin;Password=milkstore123;
 
 GOOGLE_CLIENTID=...
 GOOGLE_CLIENTSECRET=...
 
 VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-VNPAY_KEY=3615D8DTDL881PIQF6P0PIKZRTR0KIPW
+VNPAY_KEY=FC858VKW5RIH1YERAP49E2V55UOYQ6K2
