--- a/MilkStore.API/appsettings.json
+++ b/MilkStore.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cloudinary": {
+    "CloudName": "daf146blm",
+    "ApiKey": "337693464329796",
+    "ApiSecret": "0YlXgKVlaOGTb76HsP257uWSATM"
+  }
 }
