--- a/MilkStore.API/appsettings.Development.json
+++ b/MilkStore.API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyCnn": "Data Source=.;Initial Catalog=MilkStore;Integrated Security=True;Encrypt=False"
+    "MyCnn": "Data Source=RPBN\\SQLEXPRESS;Initial Catalog=MilkStore;Integrated Security=True;Encrypt=False"
   }
 }
