--- a/MilkStore.API/.env
+++ b/MilkStore.API/.env
@@ -2,12 +2,12 @@
 JWT_ISSUER=BackEnd
 JWT_AUDIENCE=FrontEnd
 
-CLIENT_DOMAIN=http://localhost:3000
+CLIENT_DOMAIN=http://localhost:44344
 #SERVER_DOMAIN=http://milkstore-001-site1.atempurl.com/
 
 #trước khi chạy cần thay đổi SERVER_DOMAIN thành domain của server, domain này chỉ có thời hạn 24h
-SERVER_DOMAIN=https://b7b5-118-68-140-202.ngrok-free.app
-DATABASE_CONNECTION_STRING=Server=.;Initial Catalog=MilkStore;Integrated Security=True;Encrypt=False;
+SERVER_DOMAIN=https://171b-171-243-49-62.ngrok-free.app
+DATABASE_CONNECTION_STRING=Server=QUINQUE\QUIN;Initial Catalog=MilkStore;Integrated Security=True;Encrypt=False;
 
 #DATABASE_CONNECTION_STRING=Server=SQL5106.site4now.net,1433;Database=db_aae407_milkstore1;User Id=db_aae407_milkstore1_admin;Password=milkstore123;
 
