--- a/MilkStore.API/.env
+++ b/MilkStore.API/.env
@@ -6,7 +6,7 @@ CLIENT_DOMAIN=http://localhost:3000
 #SERVER_DOMAIN=http://milkstore-001-site1.atempurl.com/
 
 #trước khi chạy cần thay đổi SERVER_DOMAIN thành domain của server, domain này chỉ có thời hạn 24h
-SERVER_DOMAIN=https://1742-116-110-43-97.ngrok-free.app
+SERVER_DOMAIN=https://c05f-118-69-182-144.ngrok-free.app
 DATABASE_CONNECTION_STRING=Data Source=RPBN\SQLEXPRESS;Initial Catalog=MilkStore;User ID=sa;Password=12345;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;
 
 #DATABASE_CONNECTION_STRING=Server=SQL5106.site4now.net,1433;Database=db_aae407_milkstore1;User Id=db_aae407_milkstore1_admin;Password=milkstore123;
