--- a/MilkStore.API/appsettings.Development.json
+++ b/MilkStore.API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyCnn": "Data Source=RPBN\\SQLEXPRESS;Initial Catalog=MilkStore;User ID=sa;Password=12345;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "MyCnn": "Server=14.225.253.234,1433;Database=MilkStore;User Id=sa;Password=Longvu123;TrustServerCertificate=True"
   }
 }
