--- a/MilkStore.API/appsettings.Development.json
+++ b/MilkStore.API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyCnn": "Server=14.225.253.234,1433;Database=MilkStore;User Id=sa;Password=Longvu123;TrustServerCertificate=True"
+    "DefaultConnection": "Server=14.225.253.234,1433;Database=MilkStore;User Id=sa;Password=Longvu123;TrustServerCertificate=True"
   }
 }
