--- a/MilkStore.API/appsettings.Development.json
+++ b/MilkStore.API/appsettings.Development.json
@@ -9,4 +9,13 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=14.225.253.234,1433;Database=MilkStore;User Id=sa;Password=Longvu123;TrustServerCertificate=True"
   }
+  ,
+    "JwtSettings": {
+      "Key": "BackEnd127319823712983712983719823",
+      "Issuer": "BackEnd",
+      "Audience": "FrontEnd"
+    }
+  
+
+
 }
