--- a/MilkStore.API/appsettings.json
+++ b/MilkStore.API/appsettings.json
@@ -17,5 +17,10 @@
     "CloudName": "daf146blm",
     "ApiKey": "337693464329796",
     "ApiSecret": "0YlXgKVlaOGTb76HsP257uWSATM"
+  },
+  "JwtSettings": {
+    "Key": "BackEnd127319823712983712983719823",
+    "Issuer": "BackEnd",
+    "Audience": "FrontEnd"
   }
 }
