--- a/MilkStore.API/appsettings.json
+++ b/MilkStore.API/appsettings.json
@@ -22,5 +22,8 @@
     "Key": "BackEnd127319823712983712983719823",
     "Issuer": "BackEnd",
     "Audience": "FrontEnd"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=14.225.253.234,1433;Database=MilkStore;User Id=sa;Password=Longvu123;TrustServerCertificate=True"
   }
 }
